# Grimoire

./: .dockerignore  .env_template  .gitignore  CLAUDE.md  Dockerfile  README.md  Start.bat  Start.sh  alembic.ini  docker-compose.yaml  entrypoint-api.sh  entrypoint-workers.sh  entrypoint.sh  llm_utils.py  loggers.py  main.py  models.py  pyproject.toml  request_schemas.py  requirements.txt  run.py  settings.py  settings.yaml  tasks.py
.github/workflows/: build.yml  test.yml
config/: settings.default.yaml  settings.env.yaml  settings.yaml
docker/: Dockerfile  docker-compose-dev.yaml  docker-compose.yaml
docs/: entity_disambiguation.md
grimoire/api/: auth.py  client.py  grimoire_utils.py  request_models.py
grimoire/api/routers/: grimoire.py  kobold.py  oai_generic.py
grimoire/api/schemas/: grimoire.py  kobold_passthrough.py  oai_passthrough.py  passthrough.py
grimoire/common/: api_utils.py  llm_helpers.py  loggers.py  redis.py  utils.py
grimoire/core/: default_settings.py  grimoire.py  settings.py  tasks.py  vector_embeddings.py
grimoire/db/: connection.py  models.py  queries.py  secondary_database.py
grimoire/db/migrations/: env.py
grimoire/db/migrations/versions/: 2024_01_14_1757-c2874fb7d88f_initial.py  2024_02_11_2250-4b9a98eb28b8_add_spacy_docs.py  2024_03_25_1554-7cbb06f823fc_add_tables_for_multiuser.py  2024_04_04_1326-7fc7a59c8cf5_add_tables_for_multiuser.py  2024_07_10_1729-5b0a30e8bcee_add_named_entities_table.py  2024_07_16_1346-0d440b092601_remove_spacy_doc.py  2024_08_06_1626-ea4344179df8_changes_to_message_table.py  2024_08_06_1628-1ab1bd4ac856_changes_to_message_table.py  2024_08_10_1809-d63d1146dd16_make_message_nullable.py  2024_08_16_1555-b9882f6c79fc_add_sender_name_to_messages.py  2024_08_16_2004-603509951db4_add_frozen_and_enabled_to_knowledge.py  2024_08_16_2128-07e47a0ce65d_add_summary_entry_field.py  2024_09_11_1916-4a9f2c2e6c50_add_vector_fields.py  2024_11_02_1217-7c91039c0bda_add_persona_support.py  2025_01_09_1324-f6391e0dc0e5_add_segmented_memories.py  2025_02_21_1255-0b519949f5fc_add_field_to_segmented_memories.py
memoir/: llm_helpers.py  loggers.py  memoir.py  tasks.py  utils.py
memoir/api/: client.py  request_models.py  request_schemas.py
memoir/api/routers/: kobold.py  oai_generic.py
memoir/common/: llm_helpers.py  loggers.py  utils.py
memoir/core/: default_settings.py  memoir.py  settings.py  tasks.py
memoir/db/migrations/: env.py
memoir/migrations/: env.py
migrations/: env.py
migrations/versions/: 2023_11_02_2015-fa5700ec4799_initial.py  2024_01_01_1944-4c81b3dbb2ae_initial.py
tests/unit/: test_grimoire.py  test_helpers.py
