[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "Grimoire"
description = "An implementation of long term memory for AI chatbots"
readme = "README.md"
license.file = "LICENSE"
authors = [
    { name = "Krakenos" },
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.12"
dynamic = ["version"]
dependencies = [
    "alembic>=1.12.1",
    "celery>=5.3.6",
    "celery-singleton>=0.3.1",
    "cryptography>=46.0.6",
    "fastapi>=0.110.1",
    "pgvector>=0.3.3",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.10.3",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0.1",
    "rapidfuzz>=3.9.6",
    "redis>=5.0.3",
    "requests>=2.33.1",
    "sentence-transformers>=3.1.0",
    "spacy>=3.8.3",
    "SQLAlchemy>=2.0.22",
    "SQLAlchemy-Utils>=0.41.2",
    "transformers>=5.5.4",
    "uvicorn>=0.23.2",
    "numpy>=1.26.4",
    "networkx>=3.6.1",
    "pypdf2>=3.0.1",
    "ebooklib>=0.20",
    "beautifulsoup4>=4.14.3",
]

[project.optional-dependencies]
cuda = ["spacy[cuda12x]"]

[dependency-groups]
dev = ["ruff"]

[tool.hatch.version]
path = "grimoire/__init__.py"

[tool.ruff]
exclude = [
    ".git",
    ".venv",
    ".vscode",
    "__pypackages__",
    "venv",
]

line-length = 120
indent-width = 4

target-version = "py312"

[tool.ruff.lint]
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "B",  # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "C901",  # too complex
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
docstring-code-line-length = "dynamic"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.params.Depends", "fastapi.Query", "fastapi.params.Query"]
